# simple_queue_web

./: .env  0001_queue_init.sql  Cargo.toml  README.md
src/: db.rs  handlers.rs  main.rs  models.rs  queries.rs  schema.rs  test_helpers.rs
templates/: base.html  dashboard.html  job.html  queue.html
templates/partials/: counters.html  job_table.html  table_stats.html
