[package]
name = "simple-queue-web"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Web UI for inspecting and managing simple-queue persistent job queues backed by PostgreSQL"
keywords = ["queue", "postgres", "web", "dashboard", "simple-queue"]
categories = ["web-programming", "development-tools"]
repository = "https://github.com/exlee/simple_queue_web"
rust-version = "1.85.0"
readme = "README.md"
include = ["src/**/*", "templates/**/*", "assets/**/*", "README.md", "LICENSE"]

[dependencies]
axum = "0.8"
diesel = { version = "2.2", features = ["postgres", "r2d2", "uuid", "chrono", "serde_json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
askama = "0.12"
tower-http = { version = "0.6", features = ["trace"] }
dotenvy = "0.15"


